--- a/app/src/main/res/layout/message_row.xml
+++ b/app/src/main/res/layout/message_row.xml
@@ -1,13 +1,26 @@
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_marginRight="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginBottom="20dp"
+    android:padding="15dp">
 
     <TextView
         android:id="@+id/message"
-        android:textSize="24sp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:textSize="16sp"
+        android:textColor="@android:color/black"
+        android:padding="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"  />
+    <TextView
+        android:id="@+id/author"
+        android:textSize="10sp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="2dp"
+        android:textColor="#303030"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"  />
 
