--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#D0D0D0"
     >
 
     <EditText
