--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="CustomActionBarTheme"
-        parent="@style/Theme.AppCompat.Light.DarkActionBar">
+        parent="@style/Theme.AppCompat.Light">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
-
-        <item name="actionBarStyle">@style/MyActionBar</item>
-        <item name="android:actionMenuTextColor">@android:color/black</item>
+        <item name="android:actionBarTabTextStyle">@style/MyActionBarTabText</item>
         <item name="actionMenuTextColor">@android:color/black</item>
-        <item name="homeAsUpIndicator">@drawable/ic_arrow_back_black_24dp</item>
 
 
     </style>
 
     <style name="MyActionBar"
-        parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">@android:color/white</item>
-        <item name="background">@android:color/white</item>
-
-        <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
-        <item name="titleTextStyle">@style/MyActionBarTitleText</item>
+        parent="@style/Theme.Design.Light">
+       <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
     </style>
 
     <style name="MyActionBarTitleText"
